--- a/Binglove/app/src/main/res/layout/activity_main.xml
+++ b/Binglove/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app= "http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.jian.binglove.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:background="#374046"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    tools:context="com.example.jian.binglove.MainActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        >
+        <com.pkmmte.view.CircularImageView
+            android:id="@+id/circularimagview"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:src="@mipmap/liantong"
+            app:border="true"
+            app:border_color="#EEEEEE"
+            app:border_width="3dp"
+            app:shadow="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:layout_marginLeft="16dp"
+            android:text="中国联通"
+            />
+    </LinearLayout>
+    <fragment
+        android:name="binglove.fragment.MainFramgent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="7"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+
+        >
+        <ImageView
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:background="@mipmap/turmput"
+            />
+    </LinearLayout>
+</LinearLayout>
