--- a/Binglove/app/src/main/res/values/colors.xml
+++ b/Binglove/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorOrange">#FF5722</color>
+    <color name="colorBlue">#03A9F4</color>
+    <color name="colorRed">#F44336</color>
+    <color name="colorDianxin">#01019F</color>
+    <color name="colorSim">#FF4466</color>
 </resources>
