--- a/Binglove/app/src/main/res/layout/item_fragment1.xml
+++ b/Binglove/app/src/main/res/layout/item_fragment1.xml
@@ -4,60 +4,101 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
+
     <View
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="4"
         android:orientation="vertical">
+
         <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            style="@style/myCardView"
             android:layout_weight="1"
             app:cardBackgroundColor="@color/colorSim"
             app:cardCornerRadius="15dp">
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@mipmap/sim" />
             <RelativeLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <TextView
+                    android:id="@+id/textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"
-                    android:text="@string/sim"
-                    android:textSize="18sp"
-                    android:gravity="center"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginBottom="25dp"
-                    android:id="@+id/textView" />
+                    android:gravity="center"
+                    android:text="@string/sim"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp" />
             </RelativeLayout>
 
+            <ImageView
 
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@mipmap/sim" />
         </android.support.v7.widget.CardView>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.2" />
+
         <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            style="@style/myCardView"
             android:layout_weight="1"
             app:cardBackgroundColor="@color/colorRed"
             app:cardCornerRadius="15dp">
+
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@mipmap/liantong" />
+
+            <RelativeLayout
+                android:foreground="@drawable/fg"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginBottom="25dp"
+                    android:gravity="center"
+                    android:text="@string/chinaunicom"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp" />
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.2" />
+
+        <android.support.v7.widget.CardView
+            style="@style/myCardView"
+            android:layout_weight="1"
+            app:cardBackgroundColor="@color/colorOrange"
+            app:cardCornerRadius="15dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@mipmap/dianxin" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -65,50 +106,19 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"
-                    android:text="@string/chinaunicom"
-                    android:textSize="18sp"
-                    android:gravity="center"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginBottom="25dp"
-                 />
+                    android:gravity="center"
+                    android:text="@string/chinaunicom"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp" />
             </RelativeLayout>
-        </android.support.v7.widget.CardView>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.2" />
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            app:cardBackgroundColor="@color/colorOrange"
-            app:cardCornerRadius="15dp">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@mipmap/dianxin" /> <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/white"
-                android:text="@string/chinaunicom"
-                android:textSize="18sp"
-                android:gravity="center"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginBottom="25dp"
-                />
-        </RelativeLayout>
 
         </android.support.v7.widget.CardView>
     </LinearLayout>
+
     <View
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -121,8 +131,7 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            style="@style/myCardView"
             android:layout_weight="1"
             app:cardBackgroundColor="@color/colorBlue"
             app:cardCornerRadius="15dp">
@@ -131,22 +140,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@mipmap/yidong" />
+
             <RelativeLayout
+                android:foreground="@drawable/fg"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"
-                    android:text="@string/chinamobile"
-                    android:textSize="18sp"
-                    android:gravity="center"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginBottom="25dp"
-                    />
+                    android:gravity="center"
+                    android:text="@string/chinamobile"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
@@ -156,8 +166,7 @@
             android:layout_weight="0.2" />
 
         <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            style="@style/myCardView"
             android:layout_weight="1"
             app:cardBackgroundColor="@color/colorDianxin"
             app:cardCornerRadius="15dp">
@@ -166,6 +175,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@mipmap/dianxin" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -173,15 +183,14 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"
-                    android:text="@string/CHINATELECOM"
-                    android:textSize="18sp"
-                    android:gravity="center"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginBottom="25dp"
-                    />
+                    android:gravity="center"
+                    android:text="@string/CHINATELECOM"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
@@ -191,8 +200,7 @@
             android:layout_weight="0.2" />
 
         <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            style="@style/myCardView"
             android:layout_weight="1"
             app:cardBackgroundColor="@color/colorOrange"
             app:cardCornerRadius="15dp">
@@ -201,6 +209,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@mipmap/dianxin" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -208,18 +217,18 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"
-                    android:text="@string/chinaunicom"
-                    android:textSize="18sp"
-                    android:gravity="center"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginBottom="25dp"
-                    />
+                    android:gravity="center"
+                    android:text="@string/chinaunicom"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
+
     <View
         android:layout_width="0dp"
         android:layout_height="match_parent"
