--- a/Binglove/app/src/main/res/values/layoutstytle.xml
+++ b/Binglove/app/src/main/res/values/layoutstytle.xml
@@ -9,6 +9,54 @@
 
         <item name="android:foreground">@drawable/fg</item>
     </style>
+    <style name="TextViewStyle">
+
+        <item name="android:layout_width">80dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:gravity">bottom</item>
+        <item name="android:textSize">16sp</item>
+
+    </style>
+    <style name="TextViewStyle2">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginLeft">12dp</item>
+        <item name="android:gravity">bottom|left</item>
+        <item name="android:textSize">20sp</item>    </style>
+
+    <style name="MyEdiText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginRight">12dp</item>
+        <item name="android:layout_marginLeft">12dp</item>
+        <item name="android:layout_marginTop">26dp</item>
+        <item name="android:saveEnabled">true</item>
+        <item name="android:maxLength">48</item>
+        <item name="android:background">@drawable/selector_bg_edit</item>
+        <item name="android:textCursorDrawable">@drawable/bg_input_cursor</item>
+    </style>
+    <style name="TextInputLayout" >
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="android:textColorHint">#c5c5c5</item>
+    </style>
+    <style name="toolbarstyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">?attr/actionBarSize</item>
+        <item name="android:background">@color/colorBlue</item>
+    </style><style name="ActionbarTextView">
+    <item name="android:layout_width">56dp</item>
+    <item name="android:layout_height">56dp</item>
+    <item name="android:layout_gravity">right</item>
+    <item name="android:layout_marginRight">16dp</item>
+    <item name="android:background">@color/colorBlue</item>
+    <item name="android:foreground">@drawable/button_forougron</item>
+    <item name="android:gravity">center</item>
+    <item name="android:textColor">#ffffff</item>
+    <item name="android:textSize">20sp</item>
+</style>
 
 </resources
->
+    >
