--- a/Binglove/app/src/main/res/values-v21/layoutstytle.xml
+++ b/Binglove/app/src/main/res/values-v21/layoutstytle.xml
@@ -50,6 +50,7 @@
     <item name="android:layout_gravity">right</item>
     <item name="android:layout_marginRight">16dp</item>
     <item name="android:background">@color/colorBlue</item>
+    <item name="android:foreground">@drawable/button_forougron</item>
     <item name="android:gravity">center</item>
     <item name="android:textColor">#ffffff</item>
     <item name="android:textSize">20sp</item>
