--- a/Binglove/app/src/main/res/layout/item_fragment1.xml
+++ b/Binglove/app/src/main/res/layout/item_fragment1.xml
@@ -42,7 +42,7 @@
             </RelativeLayout>
 
             <ImageView
-
+                android:id="@+id/main_sim"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@mipmap/sim" />
@@ -59,10 +59,7 @@
             app:cardBackgroundColor="@color/colorRed"
             app:cardCornerRadius="15dp">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@mipmap/liantong" />
+
 
             <RelativeLayout
 
@@ -81,6 +78,11 @@
                     android:textColor="@android:color/white"
                     android:textSize="18sp" />
             </RelativeLayout>
+            <ImageView
+                android:id="@+id/main_imgChinaUnicom"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@mipmap/liantong" />
         </android.support.v7.widget.CardView>
 
         <View
@@ -137,6 +139,7 @@
             app:cardCornerRadius="15dp">
 
             <ImageView
+                android:id="@+id/main_imgChinaMobile"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@mipmap/yidong" />
@@ -171,10 +174,6 @@
             app:cardBackgroundColor="@color/colorDianxin"
             app:cardCornerRadius="15dp">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@mipmap/dianxin" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -192,6 +191,12 @@
                     android:textColor="@android:color/white"
                     android:textSize="18sp" />
             </RelativeLayout>
+
+            <ImageView
+                android:id="@+id/main_imgChinaTelecom"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@mipmap/dianxin" />
         </android.support.v7.widget.CardView>
 
         <View
