--- a/Binglove/app/src/main/res/drawable-v21/selector_bg_edit.xml
+++ b/Binglove/app/src/main/res/drawable-v21/selector_bg_edit.xml
@@ -10,7 +10,7 @@
                 <shape android:shape="rectangle">
                     <stroke
                         android:width="1dp"
-                        android:color="@color/colorBlue" />
+                        android:color="@color/colorPrimary" />
                 </shape>
             </item>
         </layer-list>
@@ -25,7 +25,7 @@
                 <shape android:shape="rectangle">
                     <stroke
                         android:width="1dp"
-                        android:color="@color/colorBlue" />
+                        android:color="@color/colorPrimary" />
                 </shape>
             </item>
         </layer-list>
